:package: Loop flowchart

--- a/Elaborato-2021.tex
+++ b/Elaborato-2021.tex
@@ -392,6 +392,11 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
             \end{figure}
         
         \subsubsection{Loop}
+            \begin{figure}[h]
+            \centering
+                \includegraphics[height=\textheight-145pt]{Draws/Flowchart/loop.png}
+                \label{loop_flowchart}
+            \end{figure}
         
     \subsection{Analisi funzioni principali}
         \subsubsection{Controllo accelerazione motori}
