:bug: Refactor and fix connection in schematic (microstepping pins)

--- a/Elaborato-2021.tex
+++ b/Elaborato-2021.tex
@@ -718,7 +718,7 @@ void calculate_gradient_matrix () {
         
         Il minimo locale e il minimo assoluto corrispondono rispettivemente alla circonferenza mostrata nell'immagine di destra e di sinistra.\\
 
-        \ne
+        \newpage
         Un possibile esempio di implementazione è il seguente\footnote{Come per le porzioni di codice precedenti, esso fa riferimento a costanti e variabili globali non riportate in questo documento.}.
         
         \begin{changemargin}{-2cm}{-2cm}
